# talk-with-duckdb

./: .gitignore  README.md  pyproject.toml
duckdb_llm_cli/: cli.py
scripts/: generate_emissions_data.py
