[project]
name = "talk-with-duckdb"
version = "0.1.0"
description = "Natural language interface for querying DuckDB databases using LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "duckdb>=1.1.3",
    "litellm>=1.52.15",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1"
]
